Fetched template changes

--- a/.copier-answers.yaml
+++ b/.copier-answers.yaml
@@ -1,8 +1,8 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 0.7.0
+_commit: 0.8.0
 _src_path: gh:radio-aktywne/template-service-liquidsoap
 accountname: radio-aktywne
-description: Broadcast composing 🧼
+description: Broadcast composing service 🧼
 docs: true
 docsurl: https://radio-aktywne.github.io/dingo
 envprefix: DINGO
