--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -44,12 +44,14 @@ jobs:
       # Needed to checkout code
       contents: read
     steps:
+      - name: Free disk space
+        uses: jlumbroso/free-disk-space@v1.3.1
       - name: Checkout code
-        uses: actions/checkout@v4.2.2
+        uses: actions/checkout@v5.0.0
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3.9.0
+        uses: docker/setup-buildx-action@v3.11.1
       - name: Build Docker image
-        uses: docker/build-push-action@v6.14.0
+        uses: docker/build-push-action@v6.18.0
         with:
           context: ./
           # Don't save image
